--- a/Code.iPYnb
+++ b/Code.iPYnb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading data:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +219,7 @@
        "4   678.334763        244.791237          0.000000      12  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +491,7 @@
        "max    50721.483360      76406.207520          1.000000    12.000000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +570,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +597,7 @@
        "8950"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,28 +778,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BALANCE</th>\n",
+       "      <th>BALANCE_FREQUENCY</th>\n",
+       "      <th>PURCHASES</th>\n",
+       "      <th>ONEOFF_PURCHASES</th>\n",
+       "      <th>INSTALLMENTS_PURCHASES</th>\n",
+       "      <th>CASH_ADVANCE</th>\n",
+       "      <th>PURCHASES_FREQUENCY</th>\n",
+       "      <th>ONEOFF_PURCHASES_FREQUENCY</th>\n",
+       "      <th>PURCHASES_INSTALLMENTS_FREQUENCY</th>\n",
+       "      <th>CASH_ADVANCE_FREQUENCY</th>\n",
+       "      <th>CASH_ADVANCE_TRX</th>\n",
+       "      <th>PURCHASES_TRX</th>\n",
+       "      <th>CREDIT_LIMIT</th>\n",
+       "      <th>PAYMENTS</th>\n",
+       "      <th>MINIMUM_PAYMENTS</th>\n",
+       "      <th>PRC_FULL_PAYMENT</th>\n",
+       "      <th>TENURE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.735304</td>\n",
+       "      <td>0.818182</td>\n",
+       "      <td>95.40</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.568506</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.080042</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.098612</td>\n",
+       "      <td>6.908755</td>\n",
+       "      <td>5.312231</td>\n",
+       "      <td>4.945277</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.071989</td>\n",
+       "      <td>0.909091</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.770896</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>1.609438</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.853808</td>\n",
+       "      <td>8.319725</td>\n",
+       "      <td>6.978531</td>\n",
+       "      <td>0.200671</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.822504</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>773.17</td>\n",
+       "      <td>6.651791</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.564949</td>\n",
+       "      <td>8.922792</td>\n",
+       "      <td>6.434654</td>\n",
+       "      <td>6.442994</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7.419183</td>\n",
+       "      <td>0.636364</td>\n",
+       "      <td>1499.00</td>\n",
+       "      <td>7.313220</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.331694</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.080042</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>8.922792</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.747647</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6.707735</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>2.833213</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.080042</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.693147</td>\n",
+       "      <td>7.090910</td>\n",
+       "      <td>6.521114</td>\n",
+       "      <td>5.504483</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[ -907.91841659],\n",
-       "       [-1003.32175301],\n",
-       "       [ -230.14452124],\n",
-       "       ...,\n",
-       "       [ -858.91859726],\n",
-       "       [-1003.32321803],\n",
-       "       [   89.93281795]])"
+       "    BALANCE  BALANCE_FREQUENCY  PURCHASES  ONEOFF_PURCHASES  \\\n",
+       "0  3.735304           0.818182      95.40          0.000000   \n",
+       "1  8.071989           0.909091       0.00          0.000000   \n",
+       "2  7.822504           1.000000     773.17          6.651791   \n",
+       "3  7.419183           0.636364    1499.00          7.313220   \n",
+       "4  6.707735           1.000000      16.00          2.833213   \n",
+       "\n",
+       "   INSTALLMENTS_PURCHASES  CASH_ADVANCE  PURCHASES_FREQUENCY  \\\n",
+       "0                4.568506      0.000000             0.166667   \n",
+       "1                0.000000      8.770896             0.000000   \n",
+       "2                0.000000      0.000000             1.000000   \n",
+       "3                0.000000      5.331694             0.083333   \n",
+       "4                0.000000      0.000000             0.083333   \n",
+       "\n",
+       "   ONEOFF_PURCHASES_FREQUENCY  PURCHASES_INSTALLMENTS_FREQUENCY  \\\n",
+       "0                    0.000000                          0.080042   \n",
+       "1                    0.000000                          0.000000   \n",
+       "2                    0.693147                          0.000000   \n",
+       "3                    0.080042                          0.000000   \n",
+       "4                    0.080042                          0.000000   \n",
+       "\n",
+       "   CASH_ADVANCE_FREQUENCY  CASH_ADVANCE_TRX  PURCHASES_TRX  CREDIT_LIMIT  \\\n",
+       "0                0.000000          0.000000       1.098612      6.908755   \n",
+       "1                0.250000          1.609438       0.000000      8.853808   \n",
+       "2                0.000000          0.000000       2.564949      8.922792   \n",
+       "3                0.083333          0.693147       0.693147      8.922792   \n",
+       "4                0.000000          0.000000       0.693147      7.090910   \n",
+       "\n",
+       "   PAYMENTS  MINIMUM_PAYMENTS  PRC_FULL_PAYMENT  TENURE  \n",
+       "0  5.312231          4.945277          0.000000      12  \n",
+       "1  8.319725          6.978531          0.200671      12  \n",
+       "2  6.434654          6.442994          0.000000      12  \n",
+       "3  0.000000          5.747647          0.000000      12  \n",
+       "4  6.521114          5.504483          0.000000      12  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_red"
+    "df.head()"
    ]
   }
  ],
