--- a/Code.iPYnb
+++ b/Code.iPYnb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "4   678.334763        244.791237          0.000000      12  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "max    50721.483360      76406.207520          1.000000    12.000000  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "8950"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -752,45 +752,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Handling correlation using PCA:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.01150554, -5.59901976,  0.76113417,  0.10198583, -0.24235762,\n",
-       "        -0.53940646],\n",
-       "       [-8.94917359,  1.56880055,  1.00236902, -1.52366352, -1.17375774,\n",
-       "         0.45563636],\n",
-       "       [ 2.64688925,  1.33385428, -4.95828984, -2.37570567,  1.10446534,\n",
-       "        -0.2807924 ],\n",
-       "       ...,\n",
-       "       [ 1.46607145, -6.12779702,  0.90980043,  3.16338773,  3.19558844,\n",
-       "         3.42120632],\n",
-       "       [-5.88743331, -5.56752093, -2.30818847,  4.13794779,  2.25718001,\n",
-       "         3.21864732],\n",
-       "       [ 0.33101244,  2.59213912, -4.28389041,  4.93469537,  3.77678092,\n",
-       "         2.494898  ]])"
-      ]
-     },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.decomposition import PCA\n",
-    "pca = PCA(n_components=0.95)\n",
-    "X_red = pca.fit_transform(df)\n",
-    "X_red"
+    "df.to_csv(\"C:/Users/Pritam/Desktop/Project 4th sem/Data_processed.csv\", index=False)"
    ]
   }
  ],
