--- a/Code.iPYnb
+++ b/Code.iPYnb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "4   678.334763        244.791237          0.000000      12  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "max    50721.483360      76406.207520          1.000000    12.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "8950"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -753,11 +753,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"C:/Users/Pritam/Desktop/Project 4th sem/Data_processed.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Handling Correlation using PCA for Dimensionality Reduction:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "pca = PCA(n_components=5)\n",
+    "pc= pca.fit_transform(df)\n",
+    "PC=pd.DataFrame(data=pc,columns=['PC1', 'PC2', 'PC3', 'PC4', 'PC5'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PC.to_csv(\"C:/Users/Pritam/Desktop/Project 4th sem/Data_processed_after_pca.csv\", index=False)"
    ]
   }
  ],
